k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress-help
  labels:
    name: wordpress-help
    app: typesense-dashboard
